[package]
name = "codex"
version = "0.1.1"
authors = ["Jason Howmans <jason@nosaj.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.50"
web-sys = "0.3.27"
# git2 = "0.10.1"
pulldown-cmark = "0.6.0"
chrono = "0.4"
regex = "1"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
console_error_panic_hook = "0.1.6"

# [dependencies.web-sys]
# version = "0.3.4"
# features = [
#   'Node',
# ]

[profile.dev]
debug = true

[profile.release]
